Split buttons style fix
Removed extra padding from the dropdown-toggle button

--- a/stylesheets/_community/_features.less
+++ b/stylesheets/_community/_features.less
@@ -258,11 +258,6 @@
   right:4px;
 }
 
-/* --- Split Buttons ---*/
-.btn-group > .btn + .dropdown-toggle{
-  padding: 14px 8px;
-}
-
 /* --- Resolution width adjustments ---*/
 
 @media (min-width: 1200px) {
